# dvrapp

./: CMakeLists.txt
docs/: netracfg.ini
include/: Msg_Def.h  Stream_Msg_Def.h  app_alg_uLawCodec.h  app_audio.h  app_audio_EncDec.h  app_audio_priv.h  app_avibackup.h  app_bskbackup.h  app_dio_if.h  app_front_if.h  app_manager.h  app_motion.h  app_playback.h  app_ptz_if.h  app_util.h  app_writer.h  audio.h  audio_alsa.h  avi.h  avserver.h  avserver_api.h  avserver_config.h  avserver_thr.h  basket_dec.h  basket_muldec.h  basket_rec.h  basket_remoteplayback.h  basket_stm.h  bsk_tplay.h  cmessage.h  common_def.h  crash_dump_analyzer_format.h  define.h  dio.h  disk_control.h  dmessage.h  encrypt.h  fcommand.h  fdefine.h  fstruct.h  (+19 more)
include/mcfw/: device_videoDecoder.h  tvp5158_priv.h
include/mcfw/interfaces/: ti_audio.h  ti_vcap.h  ti_vdec.h  ti_vdis.h  ti_vdis_timings.h  (+1 more)
libs/libosa/: CMakeLists.txt
libs/libtiv/: CMakeLists.txt
src/: 0_fake.c  app_alg_uLawCodec.c  app_audio_EncDec.c  app_audio_capture.c  app_audio_play.c  app_avibackup.c  app_bskbackup.c  app_dio_if.c  app_front_if.c  app_manager.c  app_motion.c  app_playback.c  app_ptz_if.c  app_util.c  app_writer.c  audioStream.c  audio_alsa.c  avServer.c  avServerApi.c  avServerMainThr.c  basket_dec.c  basket_muldec.c  basket_rec.c  basket_remoteplayback.c  basket_stm.c  bsk_tplay.c  cache_mng.c  cmessage__sock.c  crash_dump_analyzer_format.c  dmessage__sock.c  encrypt__sock.c  eventHandler.c  lib_dvr_app.c  main.c  mem_mng.c  message__sock.c  msg_util.c  msghandler__sock.c  networkcfg__sock.c  prerec.c  (+7 more)
(+49 files in other folders)
